--- a/linux-5.11rc/kernel-5.11rc/linux-uksm-git/PKGBUILD
+++ b/linux-5.11rc/kernel-5.11rc/linux-uksm-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-uksm-git
 _major=5.11
 _major_rc=5.11-rc
 _srcname=linux
-pkgver=5.11.rc2.r4.g36bbbd0e234d
+pkgver=5.11.rc2.r156.g71c061d24438
 pkgrel=1
 pkgdesc='Linux UKSM'
 arch=('x86_64')
@@ -71,11 +71,9 @@ _gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
         "${_lucjanpath}/${_uksm_path}/${_uksm_patch}"
         "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-sep/0002-HID-quirks-Add-Apple-Magic-Trackpad-2-to-hid_have_sp.patch"
-        "${_lucjanpath}/arch-patches-sep/0003-btrfs-Fix-500-2000-performance-regression-w-5.10.patch"
-        "${_lucjanpath}/arch-patches-sep/0004-iwlwifi-Fix-regression-from-UDP-segmentation-support.patch"
-        "${_lucjanpath}/arch-patches-sep/0005-ALSA-hda-hdmi-fix-locking-in-silent_stream_disable.patch"
+        "${_lucjanpath}/arch-patches-v2-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v2-sep/0002-HID-quirks-Add-Apple-Magic-Trackpad-2-to-hid_have_sp.patch"
+        "${_lucjanpath}/arch-patches-v2-sep/0003-iwlwifi-Fix-regression-from-UDP-segmentation-support.patch"
          # the main kernel config files
         'config')
 
@@ -319,9 +317,7 @@ done
 sha512sums=('SKIP'
             '61d859a591b67d067812f265e6b8fb064aa04d847b38e855a92201bb3f40c0d57623cb138ba5cf2b096bb42a12fae6c8d12cd32b6e57f192d97f7da9419e3a97'
             'a42920beba10a92a91412b44b950bdfd7641154b7100ffb8bef326af4eb6d5ef66343b947b8748a077d049f4f63f51bd9d5a902cacfb1ca5f1a2de28a6563752'
-            'fc2e0dde2c999680029e708cd06f527fd6c52b7df71f2de4f12437348d761daf33a486cea5c142e4daf374aa37651d76f897cef45aba9a577edd8a89556630cf'
-            '12939ede1295d9bdba39583b6d9a4d53eb9f3af085a63abfad91bba21b19e0dc1009642509ec02fd2dd1bd4078b773dd4633656e0b2f42b928aeb6d6b33df976'
-            '89607423453b9267639b4de2f1368d5b41030a6870c4e6edcc07331a867f395a6582f1a34d146c8a84abc655c381a53c8ef743769e3c339199b08e8b972ceaa5'
-            '05e3744528c75dbb2ca82ffb80c85ba979c2c1d25fc86343f151b2306b20f4be347e841d0c9242bc3d969dc599867e23e2e8c907fa7e6fda34882a3a7ceebba1'
-            'e80bea94601c32246d8a50d32c26ca3bc29c5883e8744d12c2e6fc7b39cf78ac4b9ab19be9e24af47fe830b0605476a5a7e2e0c1f81f5a2d41e23f3df52695d5'
+            '07d937da10785c398c77218f03ff43f7ac69a6bd3ee4e66761842db6013258ad5071fb2d323228de4a5eaa15254f42ea9f47b564537f84f93cdb2357d8a27cfb'
+            '13221f9944117dc0047c6582ab60091816cb9763a05915a23d87297818e901f58142ba92cb794eeb029471fd612c60b0f0cdf5b06cb899841e71d11aee4c223a'
+            'b76c137a12192d5264287dac0ea35bb95584c7e5d14b07b1845c6d08a7554716f96557ec5e115fd8267ec82ae19b80340890ef5f15fb50f9029f99ed8c77101c'
             '9247f5c6b977fa26a8bcaf25bebdf43e1b3c21836d2654af7aa6d530c8bd394950d527661f8d1c0dd4b8293c23dc77e8edd3bf020d482f992c9eb15b89e27919')
