--- a/juliagoda-kernels/rolling/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/rolling/linux-juliagoda-git/PKGBUILD
@@ -76,7 +76,7 @@ _mm_protect=y
 # Possible compilation and installation errors.
 # Leave it unselected.
 # However, if you want to test the new solution,
-# first install mkinitcpio-zstd and kmod-zstd:
+# first install mkinitcpio-zstd:
 # https://gitlab.com/sirlucjan/workbench/tree/master/juliagoda-kernels/depends
 # or
 # https://github.com/sirlucjan/workbench/tree/master/juliagoda-kernels/depends
@@ -105,7 +105,7 @@ _major=5.10
 _patches=${_major}-dev
 _srcname=linux
 pkgver=5.10.5.r9484.gf7a53b397e95.ll39
-pkgrel=1
+pkgrel=2
 pkgdesc='Linux LL'
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
@@ -114,7 +114,7 @@ options=('!strip')
 makedepends=('kmod' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
              'graphviz' 'imagemagick' 'pahole' 'cpio' 'perl' 'tar' 'xz')
 if [ -n "$_zstd_modules" ]; then
-    depends+=('kmod-zstd' 'mkinitcpio-zstd')
+    depends+=('mkinitcpio-zstd')
 fi
 
 ### LL reverts
