--- a/linux-5.11rc/uml-5.11rc/linux-usermode-git/PKGBUILD
+++ b/linux-5.11rc/uml-5.11rc/linux-usermode-git/PKGBUILD
@@ -4,11 +4,11 @@
 pkgbase=linux-usermode-git
 pkgname=('linux-usermode-git' 'linux-usermode-git-modules')
 _major=5.11
-_minor=rc2
+_minor=rc3
 _tag=v${_major}-${_minor}
 _kernelname=-usermodelinux-git
 _srcname=linux
-pkgver=5.11.rc2.r0.ge71ba9452f0b
+pkgver=5.11.rc3.r0.g7c53f6b671f4
 pkgrel=1
 pkgdesc="User mode Linux kernel and modules"
 arch=('x86_64')
