--- a/Devel/Config/5.11-rc1/git/uml-git/config
+++ b/Devel/Config/5.11-rc1/git/uml-git/config
@@ -715,6 +715,7 @@ CONFIG_LEGACY_PTYS=y
 CONFIG_LEGACY_PTY_COUNT=32
 CONFIG_LDISC_AUTOLOAD=y
 # CONFIG_N_GSM is not set
+# CONFIG_NULL_TTY is not set
 # CONFIG_TRACE_SINK is not set
 # CONFIG_SERIAL_DEV_BUS is not set
 # CONFIG_VIRTIO_CONSOLE is not set
