--- a/linux-5.11rc/uml-5.11rc/linux-usermode-dev-git/PKGBUILD
+++ b/linux-5.11rc/uml-5.11rc/linux-usermode-dev-git/PKGBUILD
@@ -5,8 +5,8 @@ pkgbase=linux-usermode-dev-git
 pkgname=('linux-usermode-dev-git' 'linux-usermode-dev-git-modules')
 _kernelname=-usermodelinux-dev-git
 _srcname=linux
-pkgver=5.11.rc2.r4.g36bbbd0e234d
-pkgrel=1
+pkgver=5.11.rc3.r0.g7c53f6b671f4
+pkgrel=2
 pkgdesc="User mode Linux kernel and modules"
 arch=('x86_64')
 license=('GPL2')
@@ -19,7 +19,7 @@ source=(
   '70-uml.hook')
 
 sha256sums=('SKIP'
-            'eeb3f12b4cd36c90fc3365a9c7497cd7aa6e7ad9481019b21aee0be7607eb1fc'
+            '17b5b1488f226173fda3156c71ec5bb7cb06120ec3548f7377f581e3123f1c75'
             '05ea4e00d1e99bf8140a21c94e3c42acf17b9debad9c6f5decbe1dd1fe04332c')
 
 pkgver() {
