--- a/linux-5.11rc/uml-5.11rc/linux-usermode-git/config
+++ b/linux-5.11rc/uml-5.11rc/linux-usermode-git/config
@@ -715,6 +715,7 @@ CONFIG_LEGACY_PTYS=y
 CONFIG_LEGACY_PTY_COUNT=32
 CONFIG_LDISC_AUTOLOAD=y
 # CONFIG_N_GSM is not set
+# CONFIG_NULL_TTY is not set
 # CONFIG_TRACE_SINK is not set
 # CONFIG_SERIAL_DEV_BUS is not set
 # CONFIG_VIRTIO_CONSOLE is not set
