--- a/linux-5.11rc/kernel-5.11rc/linux-bfq-dev-git/PKGBUILD
+++ b/linux-5.11rc/kernel-5.11rc/linux-bfq-dev-git/PKGBUILD
@@ -50,8 +50,8 @@ pkgbase=linux-bfq-dev-git
 _major=5.11
 _major_rc=5.11-rc
 _srcname=linux
-pkgver=5.11.rc3.r0.g7c53f6b671f4
-pkgrel=3
+pkgver=5.11.rc3.r32.ge609571b5ffa
+pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -68,7 +68,7 @@ _bfq_rev_path="bfq-reverts-all"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v14"
-_bfq_rel="r2K210111"
+_bfq_rel="r2K210113"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="cpu-patches-sep"
 _gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
@@ -77,10 +77,9 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
         "${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
         "${_lucjanpath}/${_bfq_path}/${_bfq_patch}"
         "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-patches-v3-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v3-sep/0002-HID-quirks-Add-Apple-Magic-Trackpad-2-to-hid_have_sp.patch"
-        "${_lucjanpath}/arch-patches-v3-sep/0003-iwlwifi-Fix-regression-from-UDP-segmentation-support.patch"
-        "${_lucjanpath}/arch-patches-v3-sep/0004-btrfs-shrink-delalloc-pages-instead-of-full-inodes.patch"
+        "${_lucjanpath}/arch-patches-v4-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v4-sep/0002-HID-quirks-Add-Apple-Magic-Trackpad-2-to-hid_have_sp.patch"
+        "${_lucjanpath}/arch-patches-v4-sep/0003-iwlwifi-Fix-regression-from-UDP-segmentation-support.patch"
          # the main kernel config files
         'config')
 
@@ -331,10 +330,9 @@ done
 
 sha512sums=('SKIP'
             '71ef0496d6ff85be2c80c042ea663712f880998ceaec1998443a9fedf420f6ac4b00470e228812fdcc70ed2734efc1fc35d0caa4e35fabc0567f1faec8249d5e'
-            '2b31bed3775ee6073646be7c66d3cdf4aebc674d2312afb83f6d524e943f71aa9672b22947562bf05de2d6007cedb898aef957325e25be2a2ee70169f02b2b13'
+            'd9a3f7562b6b13e18d7f8b5fae86a441764b0806190e207e2ffdf3dcf01770c0f3a816f20c41907817bf749429ae3cdda951d7d77ad91145aef890767c1e00df'
             'a42920beba10a92a91412b44b950bdfd7641154b7100ffb8bef326af4eb6d5ef66343b947b8748a077d049f4f63f51bd9d5a902cacfb1ca5f1a2de28a6563752'
-            '3d2f9d656fc54ca1ee3bc0de7cae089782c0457e9561ca4e033f89f2a4fb3f640229836dfc66369f59ae67f3a6d7946d5d9f877d5f4e98b912a2fdcb1ea9af05'
-            '2e58587e1bb07aa267ab83c46a1296950cf1cf6ad93195b46acce580d1106482257f2448ee743ef6e9d6e34ffb4b8ca4fa2d8be306e56772f0c9e90a9f8b6316'
-            '21208b16e05815c489a887a10994d7bd63bd29fca192af9c0000f3e50a3233bc15c97c256cbbcb3513320378aef99364c5aaa612d061ecd0ab7d1b09822df2c6'
-            'a4109d98b88e51d9cccd957257b7839a83b67fe1c7d5ea4e7c9176e8592af5a12063cefea9bbe49a3378bea07dad00cf1e6d7bb4984957286a9948e8f10968f6'
+            'e65b7259e353bacebc5cb016758c23073b21e0a3857caed4b8492126704ab1ed73499d21fd7d1e4c4cf9a824d6ffd967d5512d1bfebbcfaea9c7e6ba5bee85f2'
+            '0c930b452c39e32d5952fc9ee3cd258195ebf10ac6335f3ecb2dba24e3790076c3de58dd4e1d280685830d36644e21df1f54205fd9265c2d892993d2447de86c'
+            '34f5eb3d6752fc13d1a99f96371397491ef06e8f29c03f0c6ce4160df3b7d63765075989eb15bd38a99800077cd03f6913a06eb872970b70b594f057e98d7c72'
             'dc094eb861d065a20c0bbe7a0c60d0ea126f283671bd0cc06c72d176095eb26a040455d0b2b225c0e7adaa22d29dd322955a6089c6bbe6deb57e4d0e16c8c320')
